nothing toegevoegd aan de hulpfuncties

--- a/Hoofdstukken/evaluatie/problemen.tex
+++ b/Hoofdstukken/evaluatie/problemen.tex
@@ -15,7 +15,7 @@ Er is voor gekozen om geen gebruik te maken van het Number-type uit fpprac. Zo i
 \subsubsection{Haskell interface}
 Doordat zowel het tekenen van grafische elementen als het uitvoeren van IO acties normaal gesproken via (een monadlaag op) de IO-monad verlopen moet Canvas.hs deze beide mogelijk maken. Hierdoor is de interface voor de user applicatie erg uitgebreid. 
 
-Er moest een manier gevonden worden zodat de handler zowel acties als grafische elementen kon opleveren, en het ook mogelijk is om slechts één van beide door te geven. Dit is gedaan door deze te verpakken in een tuple van een te tekenen grafisch element en een lijst van uit te voeren acties. Helaas resulteert dit in de user application in code die niet altijd even goed leesbaar is, daarom zijn er een tweetal hulpfuncties in het leven geroepen, \inlinecode{shape} en \inlinecode{actions}, die de leesbaarheid in de user application verhogen.
+Er moest een manier gevonden worden zodat de handler zowel acties als grafische elementen kon opleveren, en het ook mogelijk is om slechts één van beide door te geven. Dit is gedaan door deze te verpakken in een tuple van een te tekenen grafisch element en een lijst van uit te voeren acties. Helaas resulteert dit in de user application in code die niet altijd even goed leesbaar is, daarom zijn er een tweetal hulpfuncties in het leven geroepen, \inlinecode{shape} en \inlinecode{actions}, die de leesbaarheid in de user application verhogen. Naast deze twee functies is er ook een \inlinecode{nothing} functie die gebruikt kan worden om geen wijzigingen te doen aan het canvas.
 
 \paragraph{Acties met resultaat}
 Naast het bovenstaande is er nog een probleem met acties. Sommige acties hebben geen resultaat, zoals bijvoorbeeld het aanzetten van de Debug-console, of ze hebben pas later resultaat, zoals bijvoorbeeld het starten van een Timer of het vragen om een bestand van de gebruiker. Echter zijn er ook acties, zoals het openen van een bestand, die onmiddellijk resultaat opleveren. 
