Conclusie: zinnen en woorden enzo

--- a/Hoofdstukken/evaluatie/planning.tex
+++ b/Hoofdstukken/evaluatie/planning.tex
@@ -4,6 +4,6 @@ De planning tijdens dit project verliep volgens het scrum model zoals beschreven
 
 Door per tweewekelijkse sprint te plannen, hoopten we elke sprint een haalbare planning te kunnen maken die vervolgens daadwerkelijk uitgevoerd zou worden. Het belangrijkste probleem met het gebruiken van sprints binnen ons project werd veroorzaakt door de wisselende beschikbaarheid van de teamleden en, in sommige gevallen, de product owner. Het inschatten van de werkdruk van een bepaalde taak is op zichzelf een moeilijke opgave die samengaat met het scrum-model en een per sprint wisselende beschikbaarheid van de teamleden door vakantie- en tentamenweken en de fluctuerende werkdruk van andere vakken maakt het opstellen van een geschikte sprint planning vrijwel onmogelijk.
 
-Doordat de werkdruk in een sprint soms lager uitviel dan verwacht, zijn in sommige sprints aanvullende taken vanuit de project backlog naar de sprint backlog verplaatst. Daar tegenover staan sommige sprints waarin taken overbleven op de sprint backlog die overgenomen werden naar de volgende sprint. Beide acties horen niet te gebeuren binnen scrum, maar bleken onvermijdelijk gezien bovenstaande moeilijkheden.
+Doordat de werkdruk in een sprint soms lager uitviel dan verwacht, zijn in sommige sprints aanvullende taken vanuit de project back\-log naar de sprint back\-log verplaatst. Daar tegenover staan sommige sprints waarin taken overbleven op de sprint back\-log die overgenomen werden naar de volgende sprint. Beide acties horen niet te gebeuren binnen scrum, maar bleken onvermijdelijk gezien bovenstaande moeilijkheden.
 
 Later in het project is overgegaan naar een losser model waarbij de scrum master strak toezicht hield op welke taken de teamleden elke week zouden voltooien. Hierbij kon de scrum master tijdig ingrijpen als taken met hoge prioriteit uitgesteld dreigden te worden of wanneer teamleden door de aan hen toegeschreven taken voltooid hadden.
