postscript to png, last minute fix :(

--- a/Hoofdstukken/resultaten/performance_analyse.tex
+++ b/Hoofdstukken/resultaten/performance_analyse.tex
@@ -23,7 +23,7 @@ Voor dit specifieke geval zijn de heap profiles niet interessant, het grootste g
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoBeforeByteStrings.eps}
+\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoBeforeByteStrings.png}
 \caption{Heap profile voor de wijziging}
 \label{fig:performance1}
 \end{center}
@@ -31,7 +31,7 @@ Voor dit specifieke geval zijn de heap profiles niet interessant, het grootste g
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoAfterByteStrings.eps}
+\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoAfterByteStrings.png}
 \caption{Heap profile na de wijziging}
 \label{fig:performance2}
 \end{center}
