Exxterne libraies citation gefixed

--- a/Hoofdstukken/ontwerp/detail/externelibraries.tex
+++ b/Hoofdstukken/ontwerp/detail/externelibraries.tex
@@ -5,7 +5,7 @@ Bij de ontwikkeling van Canvas.hs is gebruik gemaakt van een aantal externe soft
 \subsubsection{HTTP-server}
 Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde JavaScript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de \emph{warp} \cite{Warp} module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn \emph{happstack} \cite{Happstack}, \emph{hyena} \cite{Hyena} en \emph{snap server} \cite{SnapServer}. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs.
 
-In Canvas.hs wordt het resultaat van de user applicatie naar de JavaScript-applicatie gestuurd via een WebSocket. In Canvas.hs wordt gebruik gemaakt van de \emph{WebSocket}  \cite{WebSocket} module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden. De module biedt ondersteuning voor de volledige versie van het WebSocket-protocol \cite{WebSocket2011}.  
+In Canvas.hs wordt het resultaat van de user applicatie naar de JavaScript-applicatie gestuurd via een WebSocket. In Canvas.hs wordt gebruik gemaakt van de \emph{WebSockets}  \cite{WebSocket} module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden. De module biedt ondersteuning voor de volledige versie van het WebSocket-protocol \cite{WebSocket2011}.  
 
 \subsubsection{JSON}
 Voor het coderen en decoderen van en naar JSON wordt in de Canvas.hs module de \emph{Aeson} \cite{Aeson} gebruikt. Hiermee is het relatief eenvoudig om datastructuren in Haskell om te coderen naar JSON en vice-versa. Er is voor Aeson gekozen omdat deze goed gedocumenteerd is. Een alternatief voor Aeson was \emph{Text.JSON}. Dit is niet gebruikt, omdat het gebrekkig gedocumenteerd is.
